--- a/San_Diego_Golf/css/golf.css
+++ b/San_Diego_Golf/css/golf.css
@@ -371,7 +371,7 @@ select {
 
 .hole:hover {
 	background-color: #f2f2f2;
-	box-shadow: 2px 2px 10px black;
+	
 }
 
 .hole_imgs {
@@ -384,8 +384,12 @@ select {
 	float: left;
 	width: 46%;
 	padding-left: 20px;
-	padding-right: 10px;
+	padding-right: 0px;
 	padding-top: 0;
+}
+
+#hole_text p {
+	margin: 10px 10px;
 }
 
 .hole_map {
@@ -628,7 +632,6 @@ select {
 /*---------Course Sign-up-------*/
 
 #join {
-	box-shadow: 2px 2px 10px black;
 	background: lightblue;
 }
 
@@ -638,6 +641,10 @@ select {
 
 #mt_signup img {
 	float: left;
+}
+
+#social_media {
+	margin-right: 50px;
 }
 
 .social_media {
@@ -656,8 +663,24 @@ select {
 }
 
 #ads_btn {
-	margin-top: 85px;
+	padding: 20px 20px;
+    background: limegreen;
+    border: 1px solid;
+    border-radius: 5px;
+	margin-top: 65px;
 	margin-left: 100px;
+}
+
+#ads_btn a {
+	color: black;
+}
+
+#date {
+	padding: 20px 20px;
+    background: limegreen;
+    border: 1px solid;
+    border-radius: 5px;
+    margin-left: 20px;
 }
 
 #coronado_signup {
