--- a/San_Diego_Golf/css/golf.css
+++ b/San_Diego_Golf/css/golf.css
@@ -358,12 +358,15 @@ select {
 }
 
 #MT {
-	background: limegreen;
+	background: url('../img/putting_green.jpeg');
+	background-size: cover;
 	text-align: center;
 	padding-bottom: 1em;
 	padding-top: 1em;
 	font-size: 3em;
 	border: 1px solid black;
+	color: white;
+	text-shadow: 2px 2px 10px black;
 }
 
 .hole {
@@ -633,13 +636,14 @@ select {
 /*---------Course Sign-up-------*/
 
 #join {
-	background: lightblue;
+	background: url('../img/putting_green.jpeg');
+	background-size: cover;
 	margin-bottom: 0;
 }
 
 #mt_signup {
 	float: left;
-	width: 20%;
+	width: 23%;
 }
 
 #mt_signup img {
@@ -648,7 +652,7 @@ select {
 
 #join_buttons {
 	float: left;
-	width: 53%;
+	width: 70%;
 	text-align: center;
 }
 
@@ -676,7 +680,8 @@ select {
 #ads_btn {
 	padding: 20px 20px;
 	margin-top: 65px;
-	margin-left: 100px;
+	margin-left: 0px;
+	width: 42%;
 }
 
 #ads_btn a {
@@ -691,12 +696,17 @@ select {
 
 #get_weather {
 	text-align: center;
-    background: limegreen;
-    padding: 20px;
+	padding-top: 50px;
 }
 
 .get_weather {
 	text-transform: uppercase;
+	padding: 20px;
+}
+
+#result {
+	display: none;
+	padding-top: 0px;
 }
 
 #coronado_signup {
