added h2,h3,and h4 to #hole_text and styled in css

--- a/San_Diego_Golf/css/golf.css
+++ b/San_Diego_Golf/css/golf.css
@@ -369,8 +369,8 @@ select {
 	padding-top: 0;
 }
 
-#hole_text p {
-	margin: 10px 10px;
+#hole_text p, h2, h3, h4 {
+	margin: 5px;
 }
 
 .hole_map {
