--- a/Raymond Martinez' Resume/css/resume.css
+++ b/Raymond Martinez' Resume/css/resume.css
@@ -81,6 +81,52 @@ h1 {
 .two {
 	height: 100vh;
 	background: url('../img/second_background.jpeg');
+	background-size: cover;
+}
+
+.two_p {
+	text-align: center;
+	margin: 0 auto;
+	font-size: 30px;
+	padding: 20px 20px 0;
+}
+
+#showContainer {
+	width: 640px;
+	padding: 0;
+	margin: 0 auto;
+	overflow: hidden;
+	position: relative;
+	padding-top: 20px;
+}
+
+.navButton {
+	cursor: pointer;
+	float: left;
+	width: 25px;
+	height: 22px;
+	padding: 10px;
+	margin-right: 5px;
+	overflow: hidden;
+	text-align: center;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	background: #000000;
+	opacity: 0.65;
+	user-select: none;
+}
+
+.navButton:hover {
+	opacity: 1;
+}
+
+.caption {
+	float: right;
+}
+
+.imageContainer:not(:first-child) {
+	display: none;
 }
 
 .three {
