--- a/Raymond Martinez' Resume/css/resume.css
+++ b/Raymond Martinez' Resume/css/resume.css
@@ -15,6 +15,30 @@ header  {
 	border-top-right-radius: 10px;
 }
 
+nav {
+	text-align: center;
+}
+
+nav ul {
+	list-style: none;
+}
+
+nav ul li {
+	text-transform: uppercase;
+	float: left;
+	padding: 40px;
+	display: block;
+}
+
+nav ul li a {
+	text-decoration: none;
+	color: white;
+}
+
+nav ul li:hover {
+	border-bottom: 3px solid red;
+}
+
 #header_content_container {
 	margin: 0 200px;
 	padding: 200px 0;
@@ -161,7 +185,7 @@ h1 {
 
 .two {
 	height: 100vh;
-	background: url('../img/second_background.jpeg') fixed;
+	background: url('../img/two_background6.jpeg') fixed;
 	background-size: cover;
 }
 
