changed width of #join to 80% and gave it a margin of auto

--- a/San_Diego_Golf/css/golf.css
+++ b/San_Diego_Golf/css/golf.css
@@ -616,6 +616,8 @@ select {
 	background: url('../img/putting_green.jpg');
 	background-size: cover;
 	margin-bottom: 0;
+	width: 80%;
+	margin: auto;
 }
 
 #mt_signup {
