updated mission_bay.html to mirror main page

--- a/San_Diego_Golf/css/golf.css
+++ b/San_Diego_Golf/css/golf.css
@@ -214,7 +214,7 @@ select {
 #header_title_mb {
 	height: 100vh;
 	margin: 0 auto;
-	background: url('../img/night_golf.jpg') no-repeat;
+	background: url('../img/mission_bay_gc.jpg') no-repeat;
 	background-size: cover;
 }
 
