--- a/San_Diego_Golf/css/golf.css
+++ b/San_Diego_Golf/css/golf.css
@@ -281,6 +281,7 @@ select {
 	box-sizing: border-box;
 	width: 273px;
 	background: url('../img/Partly_Cloudy.png');
+	background-size: cover;
 	border-top-left-radius: 5px;
 	border-bottom-right-radius: 5px;
 	transition: right .3s;
@@ -290,12 +291,20 @@ select {
 	right: 100px;
 }
 
+#get_weather.clear {
+	background: url('../img/clear_weather.jpg');
+}
+
 #get_weather p {
 	position: absolute;
 	top: 5px;
 	right: 5px;
 	cursor: pointer;
 	color: #fff;
+	background: red;
+	border-radius: 50%;
+	width: 20px;
+	text-align: center;
 }
 
 #get_weather ul {
