--- a/Art/css/art2.css
+++ b/Art/css/art2.css
@@ -70,6 +70,7 @@ header h1 {
 	padding: 20px;
 	letter-spacing: 10px;
 	font-size: 5em;
+	background: linear-gradient(to left, white, lightblue, white, lightblue, white);
 }
 
 #click {
@@ -78,6 +79,7 @@ header h1 {
 	width: 98%;
 	cursor: pointer;
 	font-size: 1.5em;
+	text-transform: uppercase;
 }
 
 #image_container {
@@ -102,33 +104,6 @@ img {
 	border: 1px solid black;
 }
 
-.caption {
-	margin: auto;
-	display: block;
-	width: 80%;
-	max-width: 700px;
-	text-align: center;
-	color: #ccc;
-	padding: 10px 0;
-	height: 150px;
-}
-
-.close {
-	position: absolute;
-	top: 15px;
-	right: 35px;
-	color: white;
-	font-size: 40px;
-	font-weight: bold;
-	transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-	color: red;
-	text-decoration: none;
-	cursor: pointer;
-}
 
 footer {
 	text-align: center;
@@ -164,7 +139,7 @@ footer {
 	width: 500px;
 	height: 500px;
 	background: #fff;
-	top: 50%;
+	top: 40%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	display: none;
@@ -193,6 +168,9 @@ footer {
 #modal header h3 {
 	color: #fff;
 	margin: 0 0 0 10px;
+	text-align: center;
+	letter-spacing: 5px;
+	font-size: 26px;
 }
 
 #modal #add_img img {
@@ -211,8 +189,11 @@ footer {
 }
 
 @media (max-width: 715px) {
+	#image_container {
+		padding: 0;
+	}
 	.image {
-		width: 100%;
+		width: 94%;
 	}
 	header {
 		font-size: 8px;
